lib/outbit/cli/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> action_run
Rule 1     action_run -> actions SPACE options
Rule 2     action_run -> actions
Rule 3     actions -> actions SPACE ACTION
Rule 4     actions -> ACTION
Rule 5     options -> options SPACE option
Rule 6     options -> option
Rule 7     option -> ACTION EQUAL ACTION
Rule 8     option -> ACTION EQUAL OPTIONVAL
Rule 9     option -> ACTION EQUAL OPTIONVALS
Rule 10    option -> ACTION EQUAL OPTIONVALD

Terminals, with rules where they appear

ACTION               : 3 4 7 7 8 9 10
EQUAL                : 7 8 9 10
OPTIONVAL            : 8
OPTIONVALD           : 10
OPTIONVALS           : 9
SPACE                : 1 3 5
error                : 

Nonterminals, with rules where they appear

action_run           : 0
actions              : 1 2 3
option               : 5 6
options              : 1 5

Parsing method: LALR

state 0

    (0) S' -> . action_run
    (1) action_run -> . actions SPACE options
    (2) action_run -> . actions
    (3) actions -> . actions SPACE ACTION
    (4) actions -> . ACTION

    ACTION          shift and go to state 1

    action_run                     shift and go to state 2
    actions                        shift and go to state 3

state 1

    (4) actions -> ACTION .

    SPACE           reduce using rule 4 (actions -> ACTION .)
    $end            reduce using rule 4 (actions -> ACTION .)


state 2

    (0) S' -> action_run .



state 3

    (1) action_run -> actions . SPACE options
    (2) action_run -> actions .
    (3) actions -> actions . SPACE ACTION

    SPACE           shift and go to state 4
    $end            reduce using rule 2 (action_run -> actions .)


state 4

    (1) action_run -> actions SPACE . options
    (3) actions -> actions SPACE . ACTION
    (5) options -> . options SPACE option
    (6) options -> . option
    (7) option -> . ACTION EQUAL ACTION
    (8) option -> . ACTION EQUAL OPTIONVAL
    (9) option -> . ACTION EQUAL OPTIONVALS
    (10) option -> . ACTION EQUAL OPTIONVALD

    ACTION          shift and go to state 6

    options                        shift and go to state 7
    option                         shift and go to state 5

state 5

    (6) options -> option .

    SPACE           reduce using rule 6 (options -> option .)
    $end            reduce using rule 6 (options -> option .)


state 6

    (3) actions -> actions SPACE ACTION .
    (7) option -> ACTION . EQUAL ACTION
    (8) option -> ACTION . EQUAL OPTIONVAL
    (9) option -> ACTION . EQUAL OPTIONVALS
    (10) option -> ACTION . EQUAL OPTIONVALD

    SPACE           reduce using rule 3 (actions -> actions SPACE ACTION .)
    $end            reduce using rule 3 (actions -> actions SPACE ACTION .)
    EQUAL           shift and go to state 8


state 7

    (1) action_run -> actions SPACE options .
    (5) options -> options . SPACE option

    $end            reduce using rule 1 (action_run -> actions SPACE options .)
    SPACE           shift and go to state 9


state 8

    (7) option -> ACTION EQUAL . ACTION
    (8) option -> ACTION EQUAL . OPTIONVAL
    (9) option -> ACTION EQUAL . OPTIONVALS
    (10) option -> ACTION EQUAL . OPTIONVALD

    ACTION          shift and go to state 10
    OPTIONVAL       shift and go to state 11
    OPTIONVALS      shift and go to state 13
    OPTIONVALD      shift and go to state 12


state 9

    (5) options -> options SPACE . option
    (7) option -> . ACTION EQUAL ACTION
    (8) option -> . ACTION EQUAL OPTIONVAL
    (9) option -> . ACTION EQUAL OPTIONVALS
    (10) option -> . ACTION EQUAL OPTIONVALD

    ACTION          shift and go to state 15

    option                         shift and go to state 14

state 10

    (7) option -> ACTION EQUAL ACTION .

    SPACE           reduce using rule 7 (option -> ACTION EQUAL ACTION .)
    $end            reduce using rule 7 (option -> ACTION EQUAL ACTION .)


state 11

    (8) option -> ACTION EQUAL OPTIONVAL .

    SPACE           reduce using rule 8 (option -> ACTION EQUAL OPTIONVAL .)
    $end            reduce using rule 8 (option -> ACTION EQUAL OPTIONVAL .)


state 12

    (10) option -> ACTION EQUAL OPTIONVALD .

    SPACE           reduce using rule 10 (option -> ACTION EQUAL OPTIONVALD .)
    $end            reduce using rule 10 (option -> ACTION EQUAL OPTIONVALD .)


state 13

    (9) option -> ACTION EQUAL OPTIONVALS .

    SPACE           reduce using rule 9 (option -> ACTION EQUAL OPTIONVALS .)
    $end            reduce using rule 9 (option -> ACTION EQUAL OPTIONVALS .)


state 14

    (5) options -> options SPACE option .

    SPACE           reduce using rule 5 (options -> options SPACE option .)
    $end            reduce using rule 5 (options -> options SPACE option .)


state 15

    (7) option -> ACTION . EQUAL ACTION
    (8) option -> ACTION . EQUAL OPTIONVAL
    (9) option -> ACTION . EQUAL OPTIONVALS
    (10) option -> ACTION . EQUAL OPTIONVALD

    EQUAL           shift and go to state 8

